fix: code font-size is too large on mobile

--- a/ui/theme/src/css/notes.css
+++ b/ui/theme/src/css/notes.css
@@ -61,6 +61,8 @@
 		
 		& code {
 			@apply block w-fit p-inline-8;
+
+			text-size-adjust: 100%;
 		}
 	}
 
